# react-native-update

./: .gitignore  .gitmodules  .npmignore  CODE_AUDIT.md  README-CN.md  README.md  app.plugin.js  biome.json  bunfig.toml  endpoints.json  expo-module.config.json  package.json  patch_client.sh  patch_client2.sh  patch_tests.sh  pr_description.md  react-native-update.podspec  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci-failure-email.yml  e2e_android.yml  e2e_harmony.yml  e2e_ios.yml  lint.yml  publish.yml  test.yml
Example/e2etest/: .detoxrc.js  .detoxrc.ts  .gitignore  README.md  biome.json  jest.config.js  metro.config.js  package.json  tsconfig.json  tsconfig.node.json  update.json
Example/e2etest/__tests__/: App-test.js
Example/e2etest/android/app/: build.gradle
Example/e2etest/e2e/: detox-hooks.d.ts  entry.v1.ts  entry.v2.ts  entry.v3.ts  entry.v4.ts  globalSetup.js  globalSetup.ts  globalTeardown.js  globalTeardown.ts  harmony.jest.config.js  jest.config.js  jest.config.ts  local-merge.test.ts  localUpdateConfig.ts
Example/e2etest/e2e/harmony/: README.md  globalSetup.js  globalTeardown.js  local-update.test.ts  smoke.test.ts
Example/e2etest/e2e/harness/: harmony-driver.ts
Example/e2etest/e2e/smoke/: boot.test.ts  jest.config.js
Example/e2etest/ios/: Podfile
Example/e2etest/ios/AwesomeProject/: AppDelegate.mm  SwiftLinking.swift
Example/e2etest/ios/AwesomeProject.xcodeproj/: project.pbxproj
Example/e2etest/scripts/: build-harmony-e2e.sh  compile-node-ts.js  create-rn077-oldarch-project.js  detect-ios-simulator-type.js  load-compiled-e2e-hook.js  local-e2e-server.ts  prepare-local-update-artifacts.ts  refresh-ios-app-bundle.sh  run-hdiff-wrapper.js  run-prepare-local-update-artifacts.js
Example/e2etest/src/: index.tsx
Example/expoUsePushy/: App.tsx  TestConsole.js  app.json  biome.json  package.json  update.json
Example/expoUsePushy/ios/: Podfile
Example/expoUsePushy/ios/expoUsePushy/: Info.plist
Example/expoUsePushy/ios/expoUsePushy.xcodeproj/: project.pbxproj
Example/expoUsePushy/ios/expoUsePushy.xcworkspace/: contents.xcworkspacedata
Example/harmony_use_pushy/: .gitignore  App.tsx  README.md  TestConsole.js  biome.json  metro.config.js  package.json  tsconfig.json
Example/harmony_use_pushy/__tests__/: App.test.tsx
Example/harmony_use_pushy/e2e/: app.tsx  entry.base.ts  entry.v1.ts  entry.v2.ts  entry.v4.ts  localUpdateConfig.ts
Example/harmony_use_pushy/harmony/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
Example/harmony_use_pushy/harmony/AppScope/: app.json5
Example/harmony_use_pushy/harmony/entry/: hvigorfile.ts  oh-package-lock.json5  oh-package.json5
Example/harmony_use_pushy/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
Example/harmony_use_pushy/harmony/hvigor/: hvigor-config.json5
Example/testHotUpdate/: .detoxrc.js  .gitignore  .mcp.json  biome.json  eslint.config.js  jest.config.js  jest.setup.js  metro.config.js  package.json  update.json
Example/testHotUpdate/__tests__/: App-test.js
Example/testHotUpdate/android/app/: build.gradle
Example/testHotUpdate/e2e/: entry.v1.js  entry.v2.js  entry.v3.js  globalSetup.js  globalTeardown.js  jest.config.js  local-merge.test.js  localUpdateConfig.js
Example/testHotUpdate/ios/: sentry.properties
Example/testHotUpdate/ios/AwesomeProject/: Info.plist
Example/testHotUpdate/ios/AwesomeProject.xcodeproj/: project.pbxproj
Example/testHotUpdate/scripts/: local-artifacts-server.js  prepare-local-update-artifacts.js
Example/testHotUpdate/src/: TestConsole.js  index.tsx
android/: build.gradle  proguard.pro
android/jni/: Android.mk  Application.mk  CMakeLists.txt  hpatch.c  hpatch.h
cpp/patch_core/: archive_patch_core.cpp  archive_patch_core.h  error_codes.h  hbc_transform.cpp  hbc_transform.h  hbc_transform_wire.cpp  hbc_transform_wire.h  jni_util.h  patch_core.cpp  patch_core.h  patch_core_android.cpp  sha256_util.cpp  sha256_util.h  state_core.cpp  state_core.h  state_ops.h  update_core_android.cpp
cpp/patch_core/tests/: hbc_transform_test.cpp  patch_core_test.cpp
cpp/patch_core/tests/fixtures/: v96.hbc  v96.meta.json  v96.t.hbc  v96b.hbc  v98.hbc  v98.t.hbc  v98b.hbc  v98b.t.hbc
harmony/: pushy.har
harmony/har-wrapper/: .gitignore  build-profile.json5  hvigorfile.ts  oh-package.json5
harmony/har-wrapper/AppScope/: app.json5
harmony/pushy/: BuildProfile.ets  build-profile.json5  hvigor-plugin.ts  index.ets  oh-package-lock.json5  oh-package.json5  ts.ts
harmony/pushy/src/main/cpp/: CMakeLists.txt  HDiffPatch  PushyTurboModule.cpp  PushyTurboModule.h  lzma  pushy.cpp
harmony/pushy/src/test/: DownloadTaskParams.test.ets  EventHub.test.ets  List.test.ets  ManifestParsing.test.ets  Validation.test.ets
harmony/src/main/ets/: PushyFileJSBundleProvider.ets
harmony/types/: arkts-globals.d.ts  librnupdate.d.ts  rnoh.d.ts
ios/: ExpoPushy.podspec  ExpoPushyModule.swift  ExpoPushyReactDelegateHandler.swift  ExpoPushyView.swift  ImportReact.h
ios/Expo/: ExpoPushyModule.swift  ExpoPushyReactDelegateHandler.swift
ios/RCTPushy/: RCTPushy.h  RCTPushy.mm  RCTPushyDownloader.mm
ios/RCTPushy.xcodeproj/: project.pbxproj
lib/: endpoint.ts  main.ts  simpleUpdate.tsx  utils.ts
plugin/: withUpdate.js
scripts/: build-android-so.js  build-android-so.sh  build-harmony-har.js  bundle-metadata-plugin.js  check-expo-version.js  check-harmony-types.js  hermesc-wrapper.js  prepublish.ts  process-hbc.js  prune-host-stl.sh  read.js  test-patch-core.sh  verify-android-so.js  verify-android-so.sh
src/: NativePushy.ts  client.ts  context.ts  core.ts  endpoint.ts  error.ts  globals.d.ts  i18n.ts  index.ts  isInRollout.ts  permissions.ts  provider.tsx  resolveCheckResult.ts  telemetry.ts  type.ts  utils.ts
src/__tests__/: client.test.ts  context.test.ts  core.test.ts  endpoint.test.ts  i18n.test.ts  isInRollout.test.ts  provider.render.test.tsx  provider.test.ts  resolveCheckResult.test.ts  setup.ts  telemetry.test.ts  utils.test.ts
src/locales/: en.ts  zh.ts
(+47 files in other folders)
